# earth4all_4py

./: LICENSE  README.md  pyproject.toml  setup.py  start_guide.py
src/earth4all_4py/: __init__.py  earth4all.py
src/earth4all_4py/sectors/: sector_classfile.py
src/earth4all_4py/sectors/sector_variables/: sector_parameters.json  sector_variables.json
src/earth4all_4py/utils/: constants.py  e4a_utils.py  special_functions.py  variable_classfile.py
src/earth4all_4py/vensim_model_files/: e4a_variables_and_equations.txt
src/earth4all_4py/vensim_model_files/json_eq_files/: all_var_and_par_eq_equations.json  all_variable_equations.json  climate_var_equations.json  demand_var_equations.json  energy_var_equations.json  finance_var_equations.json  food_and_land_var_equations.json  inventory_var_equations.json  labour_market_var_equations.json  other_performance_indicators_var_equations.json  output_var_equations.json  population_var_equations.json  public_var_equations.json  wellbeing_var_equations.json
src/earth4all_4py/vensim_var_outputs/dataframes/gl/: climate.csv  finance.csv  inventory.csv  labour_market.csv  other_performance_indicators.csv  output.csv  population.csv  public.csv  wellbeing.csv
src/earth4all_4py/vensim_var_outputs/dataframes/tltl/: climate.csv  finance.csv  inventory.csv  labour_market.csv  other_performance_indicators.csv  output.csv  population.csv  public.csv  wellbeing.csv
tests/: demo_unittest.py
